# nova-demo

./: .dockerignore  .env.example  .gitignore  Dockerfile  QUERY_TEMPLATES.md  README.md  TOOLS.md  TOOLS_V2.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py  session.py
app/agents/: prompts.py  revit_agent.py
app/api/: routes.py
app/auth/: dependencies.py  jwt_validator.py
app/models/: schemas.py
app/tools/: __init__.py  annotations.py  drafting.py  elements.py  export.py  families_types.py  levels.py  links_groups.py  materials.py  mep.py  model_info.py  modify.py  parameters.py  revisions.py  rooms_areas.py  schedules.py  selection.py  sheets.py  site.py  structural.py  views.py  worksets_phases.py
